--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
   <string name="app_name">oauthgithub-sample</string>
   <string name="go_text">Go!</string>
   <string name="your_name">Your name…</string>
+  <string name="login_button_text">Login</string>
 </resources>
